objects/Product_Family_Filter__mdt.object
<CustomObject>
    <fields>
        <fullName>ESG_Amount_Field__c</fullName>
        <description>US-4880704: If Sustainable1/ESG filter is selected on pipeline chart, the amount displayed will be based on this field.</description>
        <label>ESG Amount Field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Display_Name__c</fullName>
        <label>Filter Display Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Name__c</fullName>
        <label>Filter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Value__c</fullName>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount_Field__c</fullName>
        <description>US-4637975: For the pipeline tab, the opportunity amount field differs for IHS divisions. The field referenced will be used in the code to calculate opportunity amount for pipeline chart.</description>
        <label>Opportunity Amount Field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Product Family Filter</label>
    <pluralLabel>Product Family Filter</pluralLabel>
</CustomObject>